# model-router-core

./: .gitignore  ARCHITECTURE.md  README.md  implementation_plan.md  pyproject.toml
config/: runtime.example.yaml
docs/: AI_SETUP_CONTRACT.md
examples/: config.example.yaml
src/model_router/: __init__.py  cli.py  cli_blocks.py  config.py  diagnostics.py  doctor.py  exceptions.py  policy.py  prompts.py  registry.py  router.py  state_store.py  types.py  workflow.py
src/model_router/providers/: base.py  deepseek_provider.py  mock_provider.py  openai_provider.py
tests/: test_cli.py  test_cli_output.py  test_config.py  test_diagnostics.py  test_policy.py  test_provider_errors.py  test_registry.py  test_router.py  test_run_command.py  test_workflow.py
