[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "model-router-core"
version = "0.1.0"
description = "Minimal Plan-Act-Review model router core"
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0", "PyYAML>=6.0.1"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
model-router = "model_router.cli:main"
